Change possimible difficulty button colour

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <button class="newPuzzle" data-difficulty="8" style="margin:0 5px;background:#e5f92c" >New Normal Puzzle</button>
         <button class="newPuzzle" data-difficulty="10" style="margin:0 5px;background:#e52222;color:#FFF" >New Hard Puzzle</button>
         <button class="newPuzzle" data-difficulty="15" style="margin:0 5px;background:#47073d;color:#FFF" >New Impossible Puzzle</button>
-        <button class="newPuzzle" data-difficulty="30" style="margin:0 5px;background:#47073d;color:#FFF" >New Possimpible Puzzle</button>
+        <button class="newPuzzle" data-difficulty="30" style="margin:0 5px;background:#000;color:#FFF" >New Possimpible Puzzle</button>
 
         <button id="show-solution" style="display:none; margin-left:10px;opacity:0.5" >Show Solution</button>
     </div>
