--- a/index.html
+++ b/index.html
@@ -127,11 +127,18 @@
             margin: 20px auto;
             width: 755px;
         }
+        #dashboard {
+            float:left;
+        }
     </style>
 </head>
 <body>
     <h2>Pixel Puzzle - βeta</h2>
     <div id="main-container" class="container clearfix">
+        <div id="dashboard">
+            <div><span>Timer: </span><span id="game-timer">1s</span></div>
+            <div><span>Record: </span><span id="highscore"></span></div>
+        </div>
         <div id="hint-top" class="hint-top clearfix">
             <div class="hint-cell hint-cell-top">
                 1<br/>
@@ -170,7 +177,166 @@
         <button id="show-solution" style="display:none; margin-left:10px;opacity:0.5" >Show Solution</button>
     </div>
     <script>
+    /*!
+     * JavaScript Cookie v2.1.3
+     * https://github.com/js-cookie/js-cookie
+     *
+     * Copyright 2006, 2015 Klaus Hartl & Fagner Brack
+     * Released under the MIT license
+     */
+    ;(function (factory) {
+        var registeredInModuleLoader = false;
+        if (typeof define === 'function' && define.amd) {
+            define(factory);
+            registeredInModuleLoader = true;
+        }
+        if (typeof exports === 'object') {
+            module.exports = factory();
+            registeredInModuleLoader = true;
+        }
+        if (!registeredInModuleLoader) {
+            var OldCookies = window.Cookies;
+            var api = window.Cookies = factory();
+            api.noConflict = function () {
+                window.Cookies = OldCookies;
+                return api;
+            };
+        }
+    }(function () {
+        function extend () {
+            var i = 0;
+            var result = {};
+            for (; i < arguments.length; i++) {
+                var attributes = arguments[ i ];
+                for (var key in attributes) {
+                    result[key] = attributes[key];
+                }
+            }
+            return result;
+        }
+
+        function init (converter) {
+            function api (key, value, attributes) {
+                var result;
+                if (typeof document === 'undefined') {
+                    return;
+                }
+
+                // Write
+
+                if (arguments.length > 1) {
+                    attributes = extend({
+                        path: '/'
+                    }, api.defaults, attributes);
+
+                    if (typeof attributes.expires === 'number') {
+                        var expires = new Date();
+                        expires.setMilliseconds(expires.getMilliseconds() + attributes.expires * 864e+5);
+                        attributes.expires = expires;
+                    }
+
+                    try {
+                        result = JSON.stringify(value);
+                        if (/^[\{\[]/.test(result)) {
+                            value = result;
+                        }
+                    } catch (e) {}
+
+                    if (!converter.write) {
+                        value = encodeURIComponent(String(value))
+                            .replace(/%(23|24|26|2B|3A|3C|3E|3D|2F|3F|40|5B|5D|5E|60|7B|7D|7C)/g, decodeURIComponent);
+                    } else {
+                        value = converter.write(value, key);
+                    }
+
+                    key = encodeURIComponent(String(key));
+                    key = key.replace(/%(23|24|26|2B|5E|60|7C)/g, decodeURIComponent);
+                    key = key.replace(/[\(\)]/g, escape);
+
+                    return (document.cookie = [
+                        key, '=', value,
+                        attributes.expires ? '; expires=' + attributes.expires.toUTCString() : '', // use expires attribute, max-age is not supported by IE
+                        attributes.path ? '; path=' + attributes.path : '',
+                        attributes.domain ? '; domain=' + attributes.domain : '',
+                        attributes.secure ? '; secure' : ''
+                    ].join(''));
+                }
+
+                // Read
+
+                if (!key) {
+                    result = {};
+                }
+
+                // To prevent the for loop in the first place assign an empty array
+                // in case there are no cookies at all. Also prevents odd result when
+                // calling "get()"
+                var cookies = document.cookie ? document.cookie.split('; ') : [];
+                var rdecode = /(%[0-9A-Z]{2})+/g;
+                var i = 0;
+
+                for (; i < cookies.length; i++) {
+                    var parts = cookies[i].split('=');
+                    var cookie = parts.slice(1).join('=');
+
+                    if (cookie.charAt(0) === '"') {
+                        cookie = cookie.slice(1, -1);
+                    }
+
+                    try {
+                        var name = parts[0].replace(rdecode, decodeURIComponent);
+                        cookie = converter.read ?
+                            converter.read(cookie, name) : converter(cookie, name) ||
+                            cookie.replace(rdecode, decodeURIComponent);
+
+                        if (this.json) {
+                            try {
+                                cookie = JSON.parse(cookie);
+                            } catch (e) {}
+                        }
+
+                        if (key === name) {
+                            result = cookie;
+                            break;
+                        }
+
+                        if (!key) {
+                            result[name] = cookie;
+                        }
+                    } catch (e) {}
+                }
+
+                return result;
+            }
+
+            api.set = api;
+            api.get = function (key) {
+                return api.call(api, key);
+            };
+            api.getJSON = function () {
+                return api.apply({
+                    json: true
+                }, [].slice.call(arguments));
+            };
+            api.defaults = {};
+
+            api.remove = function (key, attributes) {
+                api(key, '', extend(attributes, {
+                    expires: -1
+                }));
+            };
+
+            api.withConverter = init;
+
+            return api;
+        }
+
+        return init(function () {});
+    }));
+    </script>
+    <script>
         var PP = (function () {
+            var initialTime;
             var boardElement = document.getElementById('board');
             var topHintElement = document.getElementById('hint-top');
             var leftHintElement = document.getElementById('hint-left');
@@ -179,12 +345,23 @@
             var solution = document.getElementById('solution');
             var newPuzzleButton = document.getElementById('newPuzzle')
             var mainContainer = document.getElementById('main-container');
+            var timerElement = document.getElementById('game-timer');
+            var highscoreElement = document.getElementById('highscore');
+            var highscore = {
+                easy:0,
+                normal:0,
+                hard:0,
+                impossible:0,
+                possimpible:0
+            };
             var puzzle;
             var grid;
             var topHints;
             var topHintsState;
             var leftHints;
             var leftHintsState;
+            var currentTimer;
+            var currentTime;
             var puzzleWidth = 5;
             var puzzleHeight = 5;
             var globalTouch = {
@@ -566,10 +743,25 @@
                 updateLeftHintsState();
                 if (checkWinCondition()) {
                     setTimeout(function () {
+                        clearInterval(currentTimer);
+                        recordTime(currentTime)
                         alert("YOU WIN");
                     }, 200);
                 }
             };
+            var recordTime = function (time) {
+                if (!highscore[difficultyMap[puzzleWidth]]) {
+                    highscore[difficultyMap[puzzleWidth]] = time;
+                } else if (highscore[difficultyMap[puzzleWidth]] > time) {
+                    highscore[difficultyMap[puzzleWidth]] = time;
+                }
+                highscoreElement.innerHTML = highscore[difficultyMap[puzzleWidth]] + 's';
+                for (var key in highscore) {
+                    if (highscore.hasOwnProperty(key)) {
+                        Cookies.set('hs' + key, highscore[key], {expires: 30});
+                    }
+                }
+            }
             var touchStartHandler = function (e) {
                 var target = e.target;
                 var touchObj = e.changedTouches[0];
@@ -613,7 +805,16 @@
                 generateBoard(puzzleWidth,puzzleHeight);
                 generateSolution();
                 updateTopHintsState();
-                updateLeftHintsState();  
+                updateLeftHintsState();
+                initialTime = Date.now();
+                timerElement.innerHTML = Date.now() - initialTime + 's';
+                currentTimer = setInterval(function () {
+                    currentTime = ((Date.now() - initialTime) / 1000).toFixed(0);
+                    timerElement.innerHTML = currentTime + 's';
+                },1000);
+                if (Cookies.get('hseasy')) {
+                    highscoreElement.innerHTML = Cookies.get('hseasy');
+                }
             };
             initializeGame();
             controls.addEventListener('click', function (e) {
